--- a/config.json
+++ b/config.json
@@ -14,8 +14,8 @@
     "252428784029710",
     "252428784029710"
   ],
-  "helpPic": "https://i.postimg.cc/J0R8kcmq/20251117-121708.jpg",
-  "welPic": "https://i.ibb.co.com/m5Pbg2sP/20251117-121708.jpg",
+  "helpPic": "https://i.postimg.cc/d3qVCSSw/20251204-091005.png",
+  "welPic": "https://i.ibb.co.com/PzjPqTx5/20251204-091005.png",
   "PORT": "3000",
   "delay": 100,
   "msg": {
